# windows_emil_post

./: .env.example  .gitignore  EmailServer.spec  README.md  build.bat  build.sh  dkim_private.pem  dkim_public.pem  email_sender.py  email_server.db  pyproject.toml  requirements.txt  test.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  admin.py  auth.py  email.py  pages.py
app/models/: __init__.py  config.py  user.py
app/schemas/: __init__.py  email.py  user.py
app/services/: __init__.py  attachment_storage.py  auth.py  config_service.py  dkim_signer.py  email_receiver.py  email_sender.py  smtp_server.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: admin.html  base.html  compose.html  dashboard.html  inbox.html  index.html  login.html  profile.html  register.html  setup.html
app/utils/: dkim_utils.py
